# runesync-backend

./: .gitignore  Cargo.toml  deploy.sh  samconfig.toml  template.yaml
.cargo/: config.toml
src/: db_types.rs  osrs.rs  osrs_hiscores_index.rs  players_polling.rs  setup_user.rs  skill_polling.rs  top_players_polling.rs
