[package]
name = "runesync-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
mongodb = "2.7.0"
futures = "0.3"
chrono = "0.4"

[[bin]]
name = "skill_polling"
path = "src/skill_polling.rs"

[[bin]]
name = "top_players_polling"
path = "src/top_players_polling.rs"

[[bin]]
name = "players_polling"
path = "src/players_polling.rs"